# shortcut-api

./: .env.example  .gitignore  Dockerfile  README.md  README_API.md  README_SETUP.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_device_name.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: admin.py  health.py  security.py  sessions.py
app/core/: config.py  logging.py  security.py
app/db/: migrations.py  session.py
app/integrations/discord/: webhook.py
app/integrations/gmail/: __init__.py  auth.py  client.py  processor.py  watcher.py
app/models/: __init__.py  alias.py  incoming_message.py  parsing_rule.py  security_token.py  verification_session.py
app/parsing/: default_rules.py  engine.py
app/schemas/: alias.py  health.py  message.py  parsing_rule.py  security_token.py  session.py
app/services/: alias_service.py  cleanup_service.py  session_service.py
app/utils/: tokens.py
app/workers/: cleanup_worker.py  gmail_worker.py
scripts/: gmail_auth.py  seed_rules.py
tests/: conftest.py  test_alias_service.py  test_api_sessions.py  test_gmail_processor.py  test_parsing_engine.py  test_security_token.py  test_session_service.py
